Overflow CSS fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,6 +64,7 @@ body{
     .sidebar {
         display: flex;
         flex-direction: column;
+        overflow: auto;
 
         height: 100%;
         min-width: 250px;
